[package]
name = "coherence-beamsplitter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "coherence_beamsplitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pyth-client = { version = "0.3.0", features = ["no-entrypoint"] }
anchor-lang = "0.20.0"
anchor-spl = { version = "0.20.0", features = ["dex"] }
solana-program = "1.9.5"
bigdecimal = "0.3.0"
rust_decimal = "1.21"
rust_decimal_macros = "1.21"
borsh = { version = "0.9.2", features = ["const-generics"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mem_macros = "1.0.1"