[package]
name = "coherence-beamsplitter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "coherence_beamsplitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = { version = "0.23.0", features = ["dex"] }
bigdecimal = "0.3.0"
rust_decimal = "1.21"
borsh = { version = "0.9.2", features = ["const-generics"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
chainlink_solana = "0.1.0"