[package]
name = "splitcoin-prism"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "splitcoin_prism"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pyth-client = { version = "0.3.0", features = ["no-entrypoint"] }
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
borsh = { version = "0.9.2", features = ["const-generics"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
serum_dex = { git = "https://github.com/coherence-finance/serum-dex", version = "0.5.4", features = ["no-entrypoint"] }